# TorchLanc

./: .gitignore  CHANGELOG.md  codeconcat.txt  pyproject.toml  readme.md  run_benchmark_race.bat  run_benchmark_race.sh  setup.cfg
.github/workflows/: publish.yml
benchmark/: benchmark.py
torchlanc/: torchlanc.py
