[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.semantic_release]
version_source = "file"
version_variable = "setup.cfg:version"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install build && python -m build"
commit_parser = "semantic_release.commit_parser.scipy.ScipyCommitParser"

[tool.commitizen]
name = "cz_conventional_commits"

