[metadata]
name = torchlanc
version = 1.1.0
author = ArtificialSweetener
author_email = artificialsweetenerai@proton.me
description = A High-Quality Lanczos Scaler for PyTorch
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/Artificial-Sweetener/TorchLanc
license = GPL-3.0-or-later
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Operating System :: OS Independent

project_urls =
    Homepage = https://github.com/Artificial-Sweetener/TorchLanc
    Issues = https://github.com/Artificial-Sweetener/TorchLanc/issues

[options]
packages = find:
python_requires = >=3.8
install_requires =
    torch

[options.extras_require]
dev =
    pytest
    torchvision
    numpy
    Pillow
    py-cpuinfo
    python-semantic-release
    commitizen
